--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <nav>
     Gauche
   </nav>
-  <div id="chartContainer">
-    <div class='charts' (click)="diviseChartsSegment()">
+  <div id="chartContainerSimple" (click)="diviseChartsSegment()">
+    <div class='charts'>
     </div>
   </div>
   <aside>
