--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,22 @@ main nav{
     border-right: 1px solid grey;
 }
 
+.chartContained{
+    height: 90vh;
+    width: 100%;
+    margin: auto;
+    background-color: aqua;
+    opacity: 0.5;
+}
+
+.chartContainedFour{
+    height: 45vh;
+    width: 100%;
+    margin: auto;
+    background-color: aqua;
+    opacity: 0.5;
+}
+
 .charts{
     height: 90vh;
     width: 100%;
