implementation of dynamic creation of component and split views

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,8 @@
     Droite
   </aside>
 </main>
-<!--
-<div id='template'>
-  <template #chartHost></template>
+<div id='templates'>
+  <template #chart2Host></template>
+  <template #chart3Host></template>
+  <template #chart4Host></template>
 </div>
--->
