--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -1,3 +1,12 @@
 <p>
-  chart-view works! {{ instanceNumber }}
+  chart-view works! {{ instanceNumber }} 
+  dataSet = {{ viewService.dataSet }}
 </p>
+<table mat-table [dataSource]="viewService.dataSet">
+  <th mat-header-cell *matHeaderCellDef>
+    Test
+  </th>
+  <td mat-cell *matCellDef="let element">
+    {{element}}
+  </td>
+</table>
