--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,6 @@ header{
 
 figure{
     margin: 0 auto 0.5% auto;
-    padding-bottom: 1%;
 }
 
 figcaption{
@@ -59,6 +58,7 @@ main nav{
     margin: auto;
     color: white;
     border: 1px dotted gray;
+    border-radius: 20px;
 }
 
 .chartContainedFour{
@@ -68,6 +68,7 @@ main nav{
     margin: auto;
     color: white;
     border: 1px dotted gray;
+    border-radius: 20px;
 }
 
 .charts{
