parameters and modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     <button (click)="diviseChartsSegment()">
       Ajouter un graphe
     </button>
-    Droite
+    <app-param-view class="paramview"></app-param-view>    
   </aside>
 </main>
 <div id='templates'>
