--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
 
 body{
     background-color: black;
@@ -21,7 +23,6 @@ header{
 
 figure{
     margin: 0 auto 0.5% auto;
-    padding-bottom: 1%;
 }
 
 figcaption{
