--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -7,7 +7,7 @@
           {{ droppedText }}
         </th>
       </tr>
-      <tr *ngFor="let element of viewService.dataSet.values.split(',')">
+      <tr *ngFor="let element of viewService.dataSet.values">
         <td>
           {{element}}
         </td>
