--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,35 @@
 <main>
   <nav>
     <h1>Données</h1>
-    <ul *ngFor="let data of datas">
+
+    <mat-accordion class="accordion-headers-align">
+      <mat-expansion-panel *ngFor="let data of datas">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{data.name}}
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <ul>
+          <hr>
+          <li draggable="true" *ngFor="let field of data.fields" (dragstart)="onDragField($event,field)">
+            {{ field }}
+          </li>
+        </ul>
+      </mat-expansion-panel>
+    </mat-accordion>
+
+
+
+    <!-- <ul *ngFor="let data of datas">
       {{ data.name }}
       <li draggable="true" *ngFor="let field of data.fields" (dragstart)="onDragField($event,field)">
         {{ field }}
       </li>
-    </ul>
+    </ul> -->
   </nav>
   <div id="chartContainerSimple" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
     <div class='charts' id='1'>
-        <template #chart1Host></template>
+      <template #chart1Host></template>
     </div>
   </div>
   <aside>
