--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,20 @@
 <main>
   <nav>
     <h1>Données</h1>
-
+    <hr size="1" color="lightgray">
     <mat-accordion class="accordion-headers-align">
       <mat-expansion-panel *ngFor="let data of datas">
         <mat-expansion-panel-header>
           <mat-panel-title>
-            {{data.name}}
+            <h4>{{data.name}}</h4>
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <ul>
-          <hr>
-          <li draggable="true" *ngFor="let field of data.fields" (dragstart)="onDragField($event,field)">
-            {{ field }}
-          </li>
-        </ul>
+        <hr>
+        <h6 class="field" draggable="true" *ngFor="let field of data.fields" (dragstart)="onDragField($event,field)">
+          {{ field }} <span class="tooltiptext"> {{ field }}</span>
+        </h6>
       </mat-expansion-panel>
     </mat-accordion>
-
-
-
-    <!-- <ul *ngFor="let data of datas">
-      {{ data.name }}
-      <li draggable="true" *ngFor="let field of data.fields" (dragstart)="onDragField($event,field)">
-        {{ field }}
-      </li>
-    </ul> -->
   </nav>
   <div id="chartContainerSimple" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
     <div class='charts' id='1'>
