--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,65 +1,54 @@
 .accordion-headers-align .mat-expansion-panel-header-title {
   flex-basis: 0;
-  color: rgb(250, 250, 204);
+  color: ivory;
 }
 
 main-expansion-panel{
     width: 100%;
-    overflow: auto;
-    overflow-x: auto;
+}
+
+.mat-expansion-panel-header, .mat-expansion-panel-body{
+    padding-right: 5px;
+    padding-left: 10px;
 }
 
 main nav{
+    direction: rtl;
     max-height: 90vh;
-    overflow: auto;
-    width: 20vw;
+    overflow-y: auto;
+    z-index: 10;
+}
+
+
+.data{
+    direction: ltr;
 }
 
 .field{
-    margin-left: 10%;
+    margin-left: 7%;
     margin-right: 50px;
 }
 
 h4 { 
-    display: block;
     font-size: 0.85em;
-    margin-top: 1em;
-    margin-bottom: 1.33em;
-    margin-left: 0;
-    margin-right: 0;
-    font-weight: bold;
 }
-
-.field .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-  
-    /* Position the tooltip */
-    z-index: 50;
-  }
-  
-  .field:hover .tooltiptext {
-    visibility: visible;
-  }
 
   /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 12px;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+    background: #f1f1f1;
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px; 
   }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: #888; 
+    border-radius: 10px;
   }
   
   /* Handle on hover */
