--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
   </nav>
   <div id="chartContainerSimple" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
     <div class='charts' id='1'>
-      <template #chart1Host></template>
+      <template #chartHost></template>
     </div>
   </div>
   <aside>
@@ -29,7 +29,5 @@
   </aside>
 </main>
 <div id='templates'>
-  <template #chart2Host></template>
-  <template #chart3Host></template>
-  <template #chart4Host></template>
+  <template *ngFor="let el of allTemplates; let i = index" id='{{ i+100 }}' #chartHost></template>
 </div>
