--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,8 +41,10 @@ main{
 }
 
 #chartContainerDouble{
+    overflow: auto;
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    max-height: 91vh;
 }
 
 main nav{
@@ -54,7 +56,6 @@ main nav{
 .chartContained{
     overflow: auto;
     height: 90vh;
-    width: 100%;
     color: white;
     border: 1px dotted gray;
     border-radius: 20px;
@@ -63,7 +64,6 @@ main nav{
 .chartContainedFour{
     overflow: auto;
     height: 45vh;
-    width: 100%;
     color: white;
     border: 1px dotted gray;
     border-radius: 20px;
@@ -71,7 +71,6 @@ main nav{
 
 .charts{
     height: 90vh;
-    width: 100%;
     border: 2px dotted rgba(255, 255, 255, 0.5);
     border-radius: 20px;
     background-image: url("./assets/images/barChart.png");
@@ -82,7 +81,6 @@ main nav{
 
 .chartsFour{
     height: 45vh;
-    width: 100%;
     border: 2px dotted rgba(255, 255, 255, 0.5);
     border-radius: 20px;
     background-image: url("./assets/images/barChart.png");
