des boutons et des tableaux

--- a/src/app/components/modal/modal-data-manipulation/modal-data-manipulation.component.scss
+++ b/src/app/components/modal/modal-data-manipulation/modal-data-manipulation.component.scss
@@ -19,6 +19,7 @@ mat-dialog-content {
 }
 
 .PanelDroite {
+    margin-right: 5%;
     width: 100%;
     border: 1px solid blue;
     border-top: 5px solid blue;
