--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
@@ -1,12 +1,34 @@
 mat-dialog-content {
     width: 50vw;
     max-width: 50vw;
-}
-
-.mat-elevation-z8 {
-    margin-left: 35%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-column-gap: 5px;
 }
 
 .dialogTitle {
     text-align: center;
+    border-bottom: 2px solid #888;
+}
+
+.leftTab {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border: 1px solid #888;
+}
+
+.rightTab {
+    margin-left: 10%;
+    border: 1px solid #888;
+}
+
+.saveButton {
+    margin-top: 1%;
+    margin-left: 35% !important;
+}
+
+.closeButton {
+    margin-top: 1%;
+    margin-left: 2% !important;
 }
