--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -1,22 +1,29 @@
 <div class="container" (drop)="onDrop($event)" (dragover)="allowDrop($event)">
   <p></p>
   <ng-container *ngIf="isTabView">
-    <table>
-      <ng-container *ngFor="let dataset of data">
-        <tr>
-          <th>
-            {{ dataset.name }}
-          </th>
-        </tr>
-        <tr *ngFor="let value of dataset.vls">
-          <td>
-            {{value}}
-          </td>
-        </tr>
-      </ng-container>
-    </table>
+      <!-- <table>
+          <ng-container *ngFor="let dataset of data">
+            <tr>
+              <th>
+                {{ dataset.name }}
+              </th>
+            </tr>
+            <tr *ngFor="let value of dataset.vls">
+              <td>
+                {{value}}
+              </td>
+            </tr>
+          </ng-container>
+      </table> -->
+      <table mat-table [dataSource]="tableDataSource" matSort (matSortChange)="onColumnSort($event)"
+      class="container">
+          <ng-container [matColumnDef]="displayedColumns[0]" sticky>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> {{displayedColumns[0]}} </th>
+              <td mat-cell *matCellDef="let element"> {{element[displayedColumns[0]]}} </td>
+          </ng-container>
+      </table>
   </ng-container>
-  <div>
+<div>
     <canvas #myCanvas width="250" height="250">
       {{chart}}
     </canvas>
