--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.html
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.html
@@ -35,14 +35,6 @@
         <td mat-cell *matCellDef="let element" (click)="clicked()"> {{element.symbol}} </td>
       </ng-container>
 
-      <!-- delete Column -->
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef> Suprimer </th>
-        <td mat-cell *matCellDef="let element">
-          <mat-icon (click)="toto()">delete_outline</mat-icon>
-        </td>
-      </ng-container>
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
       </tr>
@@ -97,14 +89,15 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
+      <tr mat-header-row *matHeaderRowDef="displayedColumnsright"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumnsright;" (click)="selection.toggle(row)">
       </tr>
     </table>
 
   </div>
 </mat-dialog-content>
 
-
-<button type="button" class="btn btn-primary saveButton" color="primary" (click)="save()">Ajouter</button>
-<button type="button" class="btn btn-danger closeButton" color="primary" (click)="close()">Fermer</button>
+<div class="button_div">
+  <button type="button" class="btn btn-primary saveButton" color="primary" (click)="save()">Valider</button>
+  <button type="button" class="btn btn-danger closeButton" color="primary" (click)="close()">Fermer</button>
+</div>
