--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
@@ -1,34 +1,60 @@
 mat-dialog-content {
-    width: 50vw;
-    max-width: 50vw;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-column-gap: 5px;
+  width: 50vw;
+  max-width: 50vw;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 5px;
+  background-color: black;
+  color: white;
 }
 
 .dialogTitle {
-    text-align: center;
-    border-bottom: 2px solid #888;
+  text-align: center;
+  border-bottom: 2px solid #888;
+  background-color: black;
+  color: white;
+  text-decoration: bold;
 }
 
 .leftTab {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    border: 1px solid #888;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .rightTab {
-    margin-left: 10%;
-    border: 1px solid #888;
+  margin-left: 10%;
 }
 
 .saveButton {
-    margin-top: 1%;
-    margin-left: 35% !important;
+  margin-top: 1%;
+  margin-left: 35% !important;
 }
 
 .closeButton {
-    margin-top: 1%;
-    margin-left: 2% !important;
+  margin-top: 1%;
+  margin-left: 2% !important;
 }
+
+.mat-elevation-z8 {
+  width: 100%;
+  text-align: center;
+}
+
+.mat-header-cell {
+  color: white;
+  background-color: #696969;
+}
+
+.mat-cell {
+  color: white;
+}
+
+.mat-row:nth-child(even) {
+  background-color: #696969;
+}
+
+.mat-row:nth-child(odd) {
+  background-color: #808080;
+}
+
