implementation of FAB disgn

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,6 +33,13 @@ h4 {
     font-size: 0.85em;
 }
 
+
+.fab {
+  position: fixed;
+  right: 20%;
+  bottom: 15px;
+}
+
   /* width */
 ::-webkit-scrollbar {
     width: 12px;
