--- a/src/app/components/chart-view/chart-view.component.scss
+++ b/src/app/components/chart-view/chart-view.component.scss
@@ -1,24 +1,24 @@
-.container{
-    position: relative;
+.container {
+  position: relative;
 }
 
-.tasks{
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    width: 5%;
-    margin-right: 10%;
-    top: 1vh;
-    right: 5vh;
-    position: absolute;
+.tasks {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 5%;
+  margin-right: 10%;
+  top: 1vh;
+  right: 5vh;
+  position: absolute;
 }
 
 .fabWrapper {
-    position: absolute;
-    top: 0;
-    right: 4vw;
+  position: absolute;
+  top: 0;
+  right: 4vw;
 }
 
-.fab{
-    z-index:100;
-    position: fixed;
+.fab {
+  z-index: 100;
+  position: fixed;
 }
