--- a/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
+++ b/src/app/components/modal/modal-string-manipulation/modal-string-manipulation.component.scss
@@ -1,9 +1,9 @@
 mat-dialog-content {
-  width: 50vw;
-  max-width: 50vw;
+  width: 65vw;
+  max-width: 75vw;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 5px;
+  grid-column-gap: 1px;
   background-color: black;
   color: white;
 }
@@ -39,6 +39,7 @@ mat-dialog-content {
 .mat-elevation-z8 {
   width: 100%;
   text-align: center;
+  margin-left: 3%;
 }
 
 .mat-header-cell {
@@ -57,4 +58,3 @@ mat-dialog-content {
 .mat-row:nth-child(odd) {
   background-color: #808080;
 }
-
