--- a/src/app/components/param-view/param-view.component.scss
+++ b/src/app/components/param-view/param-view.component.scss
@@ -46,3 +46,8 @@
 .mat-tab-label .mat-tab-link .mat-tab-label .mat-ripple .ng-star-inserted .mat-tab-label-active{
     color: white !important;
 }
+
+.select{
+    background-color: grey ;
+    width: 50%;
+}
