--- a/src/app/components/chart-view/chart-view.component.html
+++ b/src/app/components/chart-view/chart-view.component.html
@@ -15,15 +15,17 @@
             </tr>
           </ng-container>
       </table> -->
-      <table mat-table [dataSource]="tableDataSource" matSort (matSortChange)="onColumnSort($event)"
-      class="container">
+      <table mat-table [dataSource]="dataSource" class="container">
           <ng-container [matColumnDef]="displayedColumns[0]" sticky>
               <th mat-header-cell *matHeaderCellDef mat-sort-header> {{displayedColumns[0]}} </th>
               <td mat-cell *matCellDef="let element"> {{element[displayedColumns[0]]}} </td>
           </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
   </ng-container>
-<div>
+  <div>
     <canvas #myCanvas width="250" height="250">
       {{chart}}
     </canvas>
